<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/new_game"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/new_game" />
    <item
        android:id="@+id/validate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/validate" />
    <item
        android:id="@+id/cheat"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/cheat" />
    <item
        android:id="@+id/high_scores"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/show_best_times" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings" />
</menu>
