<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scores_table"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@+id/top_five_times_label"
    android:background="@android:color/black"
    android:padding="100dp"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/name_label"
            android:textColor="@color/YELLOW"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/time_label"
            android:textColor="@color/YELLOW"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/high_score_name_1"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />

        <TextView
            android:id="@+id/high_score_value_1"
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/high_score_name_2"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />

        <TextView
            android:id="@+id/high_score_value_2"
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/high_score_name_3"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />

        <TextView
            android:id="@+id/high_score_value_3"
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/high_score_name_4"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />

        <TextView
            android:id="@+id/high_score_value_4"
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />
    </TableRow>


    <TableRow>

        <TextView
            android:id="@+id/high_score_name_5"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />

        <TextView
            android:id="@+id/high_score_value_5"
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/null_string"
            android:textColor="@color/YELLOW" />
    </TableRow>
</TableLayout>